  * python/progress.cc:
    - Fix some threading issues (add some missing PyCbObj_BEGIN_ALLOW_THREADS)
  * python/acquire-item.cc:
    - Support items without an owner set.
  * python/tarfile.cc:
    - When extracting, only allocate a new buffer if the old one was too small.
    - Do not segfault if TarFile.go() is called without a member name.

 -- Julian Andres Klode <jak@debian.org>  Sat, 23 Jan 2010 15:35:55 +0100

python-apt (0.7.93) unstable; urgency=low

  [ Julian Andres Klode ]
  * Merge debian-sid and debian-experimental.
  * Add a tutorial on how to do things which are possible with apt-get,
    like apt-get --print-uris update (cf. #551164).
  * Build for Python 2.5, 2.6 and 3.1; 2.6 and 3.1 hit unstable on Jan 16.
    - Use DH_PYCENTRAL=nomove for now because include-links seems broken
  * Merge lp:~forest-bond/python-apt/cache-is-virtual-package-catch-key-error
    - Return False in Cache.is_virtual_package if the package does not exist.
  * Make all class-level constants have uppercase names.
  * Rewrite apt.progress.gtk2 documentation by hand and drop python-gtk2
    build-time dependency.
  * aptsources:
    - Make all classes subclasses of object.
    - distro.py: Support Python 3, decode lsb_release results using utf-8.
  * apt/progress/base.py:
    - Fix some parsing of dpkg status fd.
  * apt/progress/text.py:
    - Replace one print statement with a .write() call.
  * Rename apt_pkg.PackageIndexFile to apt_pkg.IndexFile.

  [ Colin Watson ]
  * apt/progress/__init__.py:
    - Fix InstallProgress.updateInterface() to cope with read() returning 0
      on non-blocking file descriptors (LP: #491027).
  
  [ Michael Vogt ]
  * apt/cache.py: 
    - improved docstring for the cache
    - add "enhances" property
  * data/templates/Ubuntu.info.in:
    - add lucid
  * python/cache.cc:
    - add UntranslatedDepType attribute to DependencyType
    - add DepTypeEnum that returns a value from 
      {DepDepends, DepPreDepends, ...}