@@ -10,6 +10,8 @@ python-apt (0.7.93.1) UNRELEASED; urgency=low
   * python/tarfile.cc:
     - When extracting, only allocate a new buffer if the old one was too small.
     - Do not segfault if TarFile.go() is called without a member name.
+    - Clone all pkgDirStream::Item's so apt_pkg.TarMember object can be used
+      outside of the callback function passed to go().
 
  -- Julian Andres Klode <jak@debian.org>  Sat, 23 Jan 2010 15:35:55 +0100
 
